--- a/client/modules/treo-core/css/treo/treo-light-theme.css
+++ b/client/modules/treo-core/css/treo/treo-light-theme.css
@@ -20237,11 +20237,6 @@ button.category:focus {
     flex: 1;
   }
 
-  .bottom .panel .panel-title .collapser {
-    position: relative;
-    top: -6px !important;
-  }
-
   .bottom .panel .panel-title > .action {
     display: inline-block;
     max-width: calc(100% - 40px);
